[metadata]
name = hashsmith
version = 0.1.0
description = Hashsmith CLI for encoding, decoding, hashing, and cracking
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    rich>=13.7.0
    bcrypt>=4.1.2

[options.entry_points]
console_scripts =
    hashsmith = hashsmith.cli:main
