[metadata]
name = hashsmith-cli
version = 0.1.1
description = Hashsmith CLI for encoding, decoding, hashing, and cracking
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Salih Sefer
url = https://github.com/salihsefer36/Hashsmith

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    rich>=13.7.0
    pyperclip>=1.8.2
    bcrypt>=4.1.2
    argon2-cffi>=23.1.0

[options.entry_points]
console_scripts =
    hashsmith = hashsmith.cli:main
